@@ -35,6 +35,7 @@
         xh_slidr.cpp
         xh_spin.cpp
         xh_split.cpp
+        xh_statbar.cpp
         xh_stbmp.cpp
         xh_stbox.cpp
         xh_stlin.cpp
@@ -77,6 +78,7 @@
             wx/xrc/xh_slidr.h
             wx/xrc/xh_spin.h
             wx/xrc/xh_split.h
+            wx/xrc/xh_statbar.h
             wx/xrc/xh_stbmp.h
             wx/xrc/xh_stbox.h
             wx/xrc/xh_stlin.h
